# simple_raytracer

./: .gitignore  Cargo.toml
src/: camera.rs  hittable.rs  main.rs  material.rs  ray.rs  sphere.rs  vec3.rs
