[package]
name = "simple_raytracer"
version = "0.1.0"
authors = ["Victor Wang <11711201@mail.sustech.edu.cn>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.19.1"
rand = "0.8.4"
image = "0.23.14"

[profile.release]      
overflow-checks = false     # Disable integer overflow checks.
lto = true
codegen-units = 1